--- a/JaVisteAMinhaMedia/app/src/main/AndroidManifest.xml
+++ b/JaVisteAMinhaMedia/app/src/main/AndroidManifest.xml
@@ -16,8 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activities.InitialScreenActivity" />
-        <activity android:name=".Activities.GradesActivity"></activity>
+        <activity android:name=".Activities.PredictionScreenActivity" />
+        <activity android:name=".Activities.GradesActivity" />
     </application>
 
 </manifest>
